--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -135,11 +135,8 @@ async function cargarPendientes(rutaId) {
 
   const ventasDeHoy = ventasSnap.docs.map(d=>({ id:d.id, ...d.data() })).filter(v=>{
     const txt = v.fecha_txt || "";
-const partes = txt.split(/[ ,/]+/);
-if (partes.length < 3) return false;
-const diaV = parseInt(partes[0]);
-const mesV = parseInt(partes[1]);
-const anioV = parseInt(partes[2]);
+const soloFecha = txt.split(',')[0].trim(); // se queda con "5/10/2025"
+const [diaV, mesV, anioV] = soloFecha.split('/').map(Number);
 
     return diaV === d && mesV === m && anioV === a && !v.cortado;
   });
