--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -1,91 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Cortes Pendientes – PROVSOFT</title>
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#0c6cbd">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f5f7fa;
-      padding: 20px;
-      color: #222;
-    }
-    h1 { color: #00416A; text-align:center; margin-bottom:10px; }
-    select {
-      display:block;
-      margin:0 auto 20px auto;
-      padding:8px 12px;
-      border-radius:6px;
-      border:1px solid #ccc;
-      font-size:14px;
-    }
-    table {
-      width: 100%; border-collapse: collapse; background:#fff;
-      border-radius: 10px; overflow:hidden;
-      box-shadow: 0 3px 8px rgba(0,0,0,.1);
-    }
-    th, td {
-      padding: 10px 12px; border-bottom: 1px solid #ddd;
-      text-align: left; font-size: 14px;
-    }
-    th { background: #00416A; color: #fff; }
-    tr:hover { background: #f1f5f9; }
-    button {
-      padding: 6px 10px; border:none; border-radius:6px; cursor:pointer;
-      background:#0c6cbd; color:white; font-weight:600;
-    }
-    button[disabled] { background:#999; cursor:not-allowed; }
-    /* Modal */
-    #modalResumen {
-      display:none; position:fixed; inset:0; background:rgba(0,0,0,.55);
-      align-items:center; justify-content:center; z-index:2000;
-    }
-    .modal-card {
-      background:#fff; border-radius:12px; width:min(500px,95vw);
-      padding:20px; box-shadow:0 8px 25px rgba(0,0,0,.3);
-    }
-    .modal-card h2 { margin-top:0; color:#00416A; }
-    .modal-card table { width:100%; margin-top:10px; }
-    .modal-card td, .modal-card th { border-bottom:1px solid #ddd; padding:6px; }
-    .modal-actions { margin-top:15px; text-align:right; }
-  </style>
-</head>
-<body>
-
-<h1>Cortes Pendientes</h1>
-<select id="selectRuta">
-  <option value="">Selecciona una ruta...</option>
-</select>
-
-<table id="tablaCortes">
-  <thead>
-    <tr>
-      <th>Usuario</th>
-      <th>Ruta</th>
-      <th>Total Día</th>
-      <th>Última Venta</th>
-      <th>Acción</th>
-    </tr>
-  </thead>
-  <tbody id="tbodyCortes">
-    <tr><td colspan="5" style="text-align:center;">Selecciona una ruta para ver pendientes</td></tr>
-  </tbody>
-</table>
-
-<!-- Modal resumen antes de confirmar corte -->
-<div id="modalResumen">
-  <div class="modal-card">
-    <h2>Resumen de Corte</h2>
-    <div id="resumenContenido">Cargando...</div>
-    <div class="modal-actions">
-      <button id="btnCancelar">Cancelar</button>
-      <button id="btnConfirmar" style="background:#1e8e3e;">Confirmar Corte</button>
-    </div>
-  </div>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getFirestore, collection, getDocs, updateDoc, doc, addDoc, serverTimestamp } 
@@ -114,15 +26,23 @@ let corteActual = null;
 // 🔹 Carga rutas desde usuarios_ruta
 async function cargarRutas() {
   const snap = await getDocs(collection(db, "usuarios_ruta"));
-  snap.forEach(docu => {
-    const u = docu.data();
-    if (u.rutaId) {
-      const opt = document.createElement("option");
-      opt.value = u.rutaId;
-      opt.textContent = `${u.nombre || u.usuario} – ${u.rutaId}`;
-      selectRuta.appendChild(opt);
-    }
-  });
+  if (snap.empty) {
+    // Si no tienes usuarios_ruta, añadimos manualmente tus rutas actuales
+    const opt = document.createElement("option");
+    opt.value = "AdministradorGeneral";
+    opt.textContent = "GERARDO RIOS QUEZADA – AdministradorGeneral";
+    selectRuta.appendChild(opt);
+  } else {
+    snap.forEach(docu => {
+      const u = docu.data();
+      if (u.rutaId) {
+        const opt = document.createElement("option");
+        opt.value = u.rutaId;
+        opt.textContent = `${u.nombre || u.usuario} – ${u.rutaId}`;
+        selectRuta.appendChild(opt);
+      }
+    });
+  }
 }
 
 // 🔹 Cargar ventas pendientes de la ruta seleccionada
@@ -133,13 +53,16 @@ async function cargarPendientes(rutaId) {
   const hoy = new Date(); 
   const d = hoy.getDate(), m = hoy.getMonth() + 1, a = hoy.getFullYear();
 
-  const ventasDeHoy = ventasSnap.docs.map(d=>({ id:d.id, ...d.data() })).filter(v=>{
-    const txt = v.fecha_txt || "";
-const soloFecha = txt.split(',')[0].trim(); // se queda con "5/10/2025"
-const [diaV, mesV, anioV] = soloFecha.split('/').map(Number);
-
-    return diaV === d && mesV === m && anioV === a && !v.cortado;
-  });
+  const ventasDeHoy = ventasSnap.docs
+    .map(d => ({ id: d.id, ...d.data() }))
+    .filter(v => {
+      const txt = v.fecha_txt || "";
+      // Detectar día, mes y año con regex más flexible
+      const match = txt.match(/(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{4})/);
+      if (!match) return false;
+      const [_, diaV, mesV, anioV] = match.map(Number);
+      return diaV === d && mesV === m && anioV === a && !v.cortado;
+    });
 
   tbody.innerHTML = "";
   if (ventasDeHoy.length === 0) {
@@ -147,8 +70,8 @@ const [diaV, mesV, anioV] = soloFecha.split('/').map(Number);
     return;
   }
 
-  const totalHoy = ventasDeHoy.reduce((acc,v)=>acc+(v.total||0),0);
-  const ultimaVenta = ventasDeHoy.sort((a,b)=>b.fecha_txt.localeCompare(a.fecha_txt))[0]?.fecha_txt || "—";
+  const totalHoy = ventasDeHoy.reduce((acc, v) => acc + (v.total || 0), 0);
+  const ultimaVenta = ventasDeHoy.sort((a, b) => b.fecha_txt.localeCompare(a.fecha_txt))[0]?.fecha_txt || "—";
 
   const tr = document.createElement("tr");
   tr.innerHTML = `
@@ -200,9 +123,9 @@ btnConfirmar.onclick = async () => {
   for (const docu of snap.docs) {
     const v = docu.data();
     const txt = v.fecha_txt || "";
-    const p = txt.split(/[ ,/]+/);
-    if (p.length < 3) continue;
-    const [diaV, mesV, anioV] = p.map(Number);
+    const match = txt.match(/(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{4})/);
+    if (!match) continue;
+    const [_, diaV, mesV, anioV] = match.map(Number);
     if (diaV === d && mesV === m && anioV === a) {
       await updateDoc(doc(db, "rutas_venta", rutaId, "ventas", docu.id), { cortado: true });
     }
@@ -233,11 +156,11 @@ async function mostrarResumenCorte(rutaId) {
   const ventasSnap = await getDocs(collection(db, "rutas_venta", rutaId, "ventas"));
   const hoy = new Date();
   const d = hoy.getDate(), m = hoy.getMonth() + 1, a = hoy.getFullYear();
-  const ventasDeHoy = ventasSnap.docs.map(d=>({id:d.id,...d.data()})).filter(v=>{
+  const ventasDeHoy = ventasSnap.docs.map(d => ({ id: d.id, ...d.data() })).filter(v => {
     const txt = v.fecha_txt || "";
-    const p = txt.split(/[ ,/]+/);
-    if (p.length < 3) return false;
-    const [diaV, mesV, anioV] = p.map(Number);
+    const match = txt.match(/(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{4})/);
+    if (!match) return false;
+    const [_, diaV, mesV, anioV] = match.map(Number);
     return diaV === d && mesV === m && anioV === a && !v.cortado;
   });
 
@@ -274,8 +197,5 @@ async function mostrarResumenCorte(rutaId) {
   contenido.innerHTML = html;
 }
 
-// Inicia todo
 cargarRutas();
 </script>
-</body>
-</html>
