--- a/POSMOVIL/corte_reporte.html
+++ b/POSMOVIL/corte_reporte.html
@@ -117,77 +117,82 @@
 
   <button class="btn-print" id="btnPrint">🖨️ Imprimir Corte</button>
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs } 
-      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getFirestore, collection, getDocs } 
+    from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
-      authDomain: "inventariopv-643f1.firebaseapp.com",
-      projectId: "inventariopv-643f1",
-      storageBucket: "inventariopv-643f1.appspot.com",
-      messagingSenderId: "96242533231",
-      appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
-    };
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  const firebaseConfig = {
+    apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+    authDomain: "inventariopv-643f1.firebaseapp.com",
+    projectId: "inventariopv-643f1",
+    storageBucket: "inventariopv-643f1.appspot.com",
+    messagingSenderId: "96242533231",
+    appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
+  };
 
-    const params = new URLSearchParams(location.search);
-    const rutaId = params.get("rutaId");
-    const usuario = params.get("usuario");
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-    document.getElementById("ruta").textContent = rutaId || "—";
-    document.getElementById("usuario").textContent = usuario || "—";
-    document.getElementById("fecha").textContent = new Date().toLocaleString();
+  const params = new URLSearchParams(location.search);
+  const rutaId = params.get("rutaId");
+  const usuario = params.get("usuario");
 
-    const tbodyDeptos = document.querySelector("#tablaDepartamentos tbody");
-    const tbodyPagos = document.querySelector("#tablaPagos tbody");
+  document.getElementById("ruta").textContent = rutaId || "—";
+  document.getElementById("usuario").textContent = usuario || "—";
+  document.getElementById("fecha").textContent = new Date().toLocaleString();
 
-    async function cargarCorte() {
-      const ventasRef = collection(db, "rutas_venta", rutaId, "ventas");
-      const snap = await getDocs(ventasRef);
-      const ventas = snap.docs.map(d => d.data());
-      const hoy = new Date().toLocaleDateString();
+  async function cargarCorte() {
+    const cortesRef = collection(db, "cortes_globales");
+    const snap = await getDocs(cortesRef);
+    const cortes = snap.docs.map(d => d.data());
 
-      const ventasHoy = ventas.filter(v => (v.fecha_txt || "").includes(hoy));
+    // Filtra por rutaId
+    const corteRuta = cortes.find(c => c.rutaId === rutaId);
 
-      // Clasificación por departamento (según campo o descripción)
-      const porDepto = {};
-      const porPago = { efectivo: 0, credito: 0, otro: 0 };
-      let total = 0;
-
-      for (const v of ventasHoy) {
-        const dep = v.departamento || "GENERAL";
-        porDepto[dep] = (porDepto[dep] || 0) + (v.total || 0);
-        const metodo = (v.metodo_pago || "otro").toLowerCase();
-        if (porPago[metodo] !== undefined) porPago[metodo] += v.total || 0;
-        else porPago.otro += v.total || 0;
-        total += v.total || 0;
-      }
-
-      Object.entries(porDepto).forEach(([dep, val]) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${dep}</td><td>$${val.toFixed(2)}</td>`;
-        tbodyDeptos.appendChild(tr);
-      });
-
-      Object.entries(porPago).forEach(([metodo, val]) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${metodo.toUpperCase()}</td><td>$${val.toFixed(2)}</td>`;
-        tbodyPagos.appendChild(tr);
-      });
-
-      document.getElementById("numTickets").textContent = ventasHoy.length;
-      document.getElementById("totalGeneral").textContent = "$" + total.toFixed(2);
+    if (!corteRuta) {
+      alert("No se encontró corte para esta ruta.");
+      return;
     }
 
-    cargarCorte();
-    
-    document.getElementById("btnPrint").addEventListener("click", async () => {
-  await cargarCorte(); // asegura datos actualizados
-  setTimeout(() => window.print(), 800); // espera a que se rendericen
-});
+    const resumen = corteRuta.resumen || {};
+    const porDepto = resumen.porDepto || {};
+    const porMetodo = resumen.porMetodo || {};
 
-  </script>
+    document.getElementById("usuario").textContent = corteRuta.realizado_por || "—";
+    document.getElementById("fecha").textContent = 
+      corteRuta.fecha ? new Date(corteRuta.fecha).toLocaleString() : "—";
+
+    // Llenar tabla por departamento
+    const tbodyDeptos = document.querySelector("#tablaDepartamentos tbody");
+    tbodyDeptos.innerHTML = "";
+    Object.entries(porDepto).forEach(([dep, val]) => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td>${dep}</td><td>$${val.toFixed(2)}</td>`;
+      tbodyDeptos.appendChild(tr);
+    });
+
+    // Llenar tabla por método de pago
+    const tbodyPagos = document.querySelector("#tablaPagos tbody");
+    tbodyPagos.innerHTML = "";
+    Object.entries(porMetodo).forEach(([metodo, val]) => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td>${metodo.toUpperCase()}</td><td>$${val.toFixed(2)}</td>`;
+      tbodyPagos.appendChild(tr);
+    });
+
+    document.getElementById("numTickets").textContent = resumen.totalTickets || 0;
+    document.getElementById("totalGeneral").textContent = 
+      "$" + (resumen.totalDia || 0).toFixed(2);
+  }
+
+  // Cargar datos al abrir
+  cargarCorte();
+
+  // Imprimir con datos actualizados
+  document.getElementById("btnPrint").addEventListener("click", async () => {
+    await cargarCorte();
+    setTimeout(() => window.print(), 800);
+  });
+</script>
 </body>
 </html>
